# tts_server

./: .gitattributes  .gitignore  CLAUDE.md  pyproject.toml  readme.md  requirements-chatterbox.txt  requirements-higgs.txt  requirements-host.txt  requirements-qwen3.txt  requirements.txt  start_server.ps1  start_server.sh
app/: cli.py  engine_base.py  engine_chatterbox.py  engine_chatterbox_full.py  engine_higgs.py  engine_qwen3.py  main.py  model_manager.py  voices.py
docs/: agent-team-spec.md  agentic-qwen3-tts-workflow.md  api.md  chatterbox.md  higgs.md  qwen3.md  setup.md  vram_management.md
scripts/: setup_venvs.ps1  setup_venvs.sh
tests/: generate_artifacts.py  manifest.json  profile_fa2_higgs.py  setup_test_voices.py  stt_validate.py  test_higgs_drift_integration.py  test_higgs_worker_unit.py  test_integration.py
tests/voice_fixtures/higgs-sable/: metadata.json
tests/voice_fixtures/ragnar-narrator/: metadata.json  reference.txt
workers/: chatterbox_full_worker.py  chatterbox_worker.py  higgs_worker.py  qwen3_worker.py  worker_protocol.py
