# tts-server uses separate per-engine venvs to avoid transformers version conflicts:
#   /workspaces/.venvs/tts_server          — host (FastAPI server only, listed below)
#   /workspaces/.venvs/tts_server-chatterbox — requirements-chatterbox.txt
#   /workspaces/.venvs/tts_server-higgs    — requirements-higgs.txt (transformers<4.47.0)
#   /workspaces/.venvs/tts_server-qwen3    — requirements-qwen3.txt (transformers>=4.57.3)
# Run `bash scripts/setup_venvs.sh` to create and populate all venvs.

[project]
name = "tts-server"
version = "0.1.0"
description = "Consolidated TTS server supporting multiple model backends"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.10",
]

[tool.ruff]
line-length = 100
