# tts-server uses separate per-engine venvs to avoid transformers version conflicts:
#   .venv\               — host (FastAPI server only, deps listed below)
#   .venvs\chatterbox\   — requirements-chatterbox.txt
#   .venvs\higgs\        — requirements-higgs.txt (transformers<4.47.0)
#   .venvs\qwen3\        — requirements-qwen3.txt (transformers>=4.57.3)
# Run `powershell -ExecutionPolicy Bypass -File scripts\setup_venvs.ps1` to create all venvs.

[project]
name = "tts-server"
version = "0.1.0"
description = "Consolidated TTS server supporting multiple model backends"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.scripts]
tts-server = "app.cli:serve"

[tool.setuptools.packages.find]
include = ["app*", "workers*"]

[tool.ruff]
line-length = 100
