# tts-server uses separate per-engine venvs to avoid transformers version conflicts:
#   .venv\               — host (FastAPI server only, deps listed below)
#   .venvs\chatterbox\   — requirements-chatterbox.txt
#   .venvs\higgs\        — requirements-higgs.txt (transformers<4.47.0)
#   .venvs\qwen3\        — requirements-qwen3.txt (transformers>=4.57.3)
# Run `powershell -ExecutionPolicy Bypass -File scripts\setup_venvs.ps1` to create all venvs.

[project]
name = "tts-server"
version = "0.1.0"
description = "Consolidated TTS server supporting multiple model backends"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.10",
    "python-dotenv>=1.0",
]

[project.scripts]
# Starts uvicorn on 127.0.0.1:8765 (override with TTS_HOST / TTS_PORT env vars).
# NOTE: run `pip install -e .` in the host venv (.venv\) to register this script.
# NOTE: if using VS Code, prefer start_server.ps1 / start_server.sh instead —
#       VS Code auto-forwards ports from bash/WSL-spawned processes, making the
#       server unreachable from Windows tools. The PS script avoids this by
#       spawning uvicorn as a detached native Windows process.
tts-server = "app.cli:serve"

[tool.setuptools.packages.find]
include = ["app*", "workers*"]

[tool.ruff]
line-length = 100
